<resources>
    <string name="app_name">Workout Planner</string>
    <string name="action_settings">Settings</string>
    <string name="default_title">My Workout</string>
    <string name="default_set">Sets: 1</string>
    <string name="default_round">Rounds: 0</string>
    <string name="item_name">Workout %1$d</string>
    <string name="item_sets">Total Sets: %1$d</string>
    <string name="item_rounds">Rounds: %1$d</string>
    <string name="name_hint">Name</string>
    <string name="text_delete">Delete</string>
    <string name="title_activity_my_workout">MyWorkoutActivity</string>
    <string name="default_name">Name</string>
    <string name="default_descrip">Description for the above set</string>
    <string name="bottom_sheet_delete">Delete</string>
    <string name="bottom_sheet_edit">Edit</string>
    <string name="descrip_hint">Description</string>
    <string name="action_about">About</string>
    <string name="tts_starting">Starting in, 5. 4. 3. 2. 1.</string>
    <string name="tts_rest_ending">Rest ending in.</string>
    <string name="tts_round_finished">Round finished, take a break.</string>
    <string name="tts_finished">Finished.</string>
    <string name="tts_take_rest">Take a rest.</string>
    <string name="tts_next_round">Beginning next round.</string>
    <string name="tts_begin">Begin.</string>
    <string name="tts_five">5.</string>
    <string name="tts_four">4.</string>
    <string name="tts_three">3.</string>
    <string name="tts_two">2.</string>
    <string name="tts_one">1.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_workout_button">Start Workout</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_add_set">Add Set</string>
    <string name="rest_title_text">Rest Time</string>
    <string name="break_title_text">Break Time</string>
    <string name="round_title_text">Rounds</string>
    <string name="default_time">1:00</string>
    <string name="minute_label">M</string>
    <string name="colon">:</string>
    <string name="second_label">S</string>
    <string name="set_number_title">Set Number:</string>
    <string name="default_num">1</string>
    <string name="round_number_title">Round Number:</string>
    <string name="description_label">Description:</string>
    <string name="placeholder_description">Default Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_number">10</string>
    <string name="no_placeholder">No _____</string>
    <string name="no_rest">No Rest</string>
    <string name="no_break">No Break</string>
    <string name="button_save">Save</string>
    <string name="header_title_default">Default Sets</string>
    <string name="header_title_user_created">User Created</string>
    <string name="header_title_my_sets">My Sets</string>
    <string name="bottom_sheet_dup">Duplicate</string>
    <string name="add_new_set">Add New Set</string>
    <string name="ellipsis">...</string>
    <string name="none_text">None</string>
    <string name="ic_descrip">Icon</string>
    <string name="new_workout">New Workout</string>
    <string name="add_set">Add Set</string>
    <string name="rename_workout">Rename</string>
    <string name="name_error">Name must not be empty!</string>
    <string name="time_error">Time must not be 0.</string>
    <string name="new_set">New Set</string>
    <string name="edit_set">Edit Set</string>
    <string name="total_time_title">Total Time:</string>
    <string-array name="voice_options_titles">
        <item>Male 1</item>
        <item>Male 2</item>
        <item>Female 1</item>
        <item>Female 2</item>
    </string-array>
    <string-array name="voice_options_values">
        <item>M1</item>
        <item>M2</item>
        <item>F1</item>
        <item>F2</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="default_set_title">Set Title</string>
    <string name="set_time_label">Set Time: </string>
    <string name="default_sample_text">This is a block of sample text. Make sure it is changed to something more meaningful.</string>
    <string name="descrip_jog">
        Jog at a slow, leisurely pace.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_run">
        Run at a comfortable speed to get the heart pumping.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_walk">
        Walk at a brisk, comfortable pace to cooldown.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_highstep">
        March in place at a reasonable pace, reaching your knees up to a 90 degree angle.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_pushups">
        Lie on the floor face down and place your hands about shoulder width.\n
        Next, lower yourself downward until your chest almost touches the floor as you inhale.\n
        Now breathe out and press your upper body back up to the starting position while squeezing your chest.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_dips">
        For this exercise you will need to place a bench, chair, or stool behind your back. With the bench perpendicular to your body, and while looking away from it, hold on to the bench on its edge with hands separated at shoulder width. \n
        Slowly lower your body as you inhale by bending at the elbows until you lower yourself.: Keep the elbows as close as possible throughout the movement. \n
        Using your triceps to bring your torso up again, lift yourself back to the starting position and repeat. \n
        \n
        Equipment: Bench, Chair, Stool
    </string>
    <string name="descrip_curls">
        Stand up straight with a dumbbell in each hand. Keep your elbows close to your torso and rotate your palms up.\n
        Now, keeping the upper arms stationary, exhale and curl the weights while contracting your biceps. Hold the contracted position for a brief pause as you squeeze your biceps.\n
        Then, inhale and slowly begin to lower the dumbbells back to the starting position. Repeat.\n
        \n
        Equipment: Dumbbells
    </string>
    <string name="descrip_shoulderpress">
        While holding a dumbbell in each hand, sit on a bench or stand.\n
        Now raise the dumbbells to shoulder height one at a time. Make sure to rotate your wrists so that the palms of your hands are facing forward.\n
        Now, exhale and push the dumbbells upward until they touch at the top.\n
        Then, after a brief pause at the top contracted position, slowly lower the weights back down to the starting position while inhaling.\n
        Repeat.\n
        \n
        Equipment: Dumbbells
    </string>
    <string name="descrip_chestpress">
        Lie down on a flat bench with a dumbbell in each hand. The palms of your hands will be facing each other.\n
        Then, using your thighs to help raise the dumbbells up, lift the dumbbells one at a time so that you can hold them in front of you at shoulder width.\n
        Once at shoulder width, rotate your wrists forward so that the palms of your hands are facing away from you. The dumbbells should be just to the sides of your chest.\n
        Then, as you breathe out, use your chest to push the dumbbells up. Lock your arms at the top of the lift and squeeze your chest, hold for a second and then begin coming down slowly.\n
        Repeat.\n
        \n
        Equipment: Dumbbells, Bunch
    </string>
    <string name="descrip_squats">
        Stand with your feet shoulder width apart. Place your hands behind your head.\n
        Begin the movement by flexing your knees and hips, sitting back with your hips.\n
        Continue down to full depth if you are able, and quickly reverse the motion until you return to the starting position. As you squat, keep your head and chest up and push your knees out.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_wallsquats">
        Begin with your back against the wall and your feet out in front of you. Have your feet shoulder width apart.\n
        Descend slowly by sliding down the wall. Keep your head up and maintain a flat back against the wall.\n
        Continue down until the upper legs are at or just below parallel to the floor. Maintain this position for an amount of time. Focus on breathing continuously throughout.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_situps">
        Lie flat on your back with your feet flat on the ground.\n
        Now place your hands lightly on either side of your head keeping your elbows in. Don\'t lock your fingers behind your head.\n
        Push down as hard as you can with your lower back as you contract your abdominals and exhale. Your shoulders should come up off the floor only about four inches, and your lower back should remain on the floor.\n
        After the one second contraction, begin to come down slowly again to the starting position as you inhale.\n
        Repeat.\n
        \n
        Equipment: None
    </string>
    <string name="descrip_plank">
        Get into a prone position on the floor, supporting your weight on your toes and your forearms. Your arms are bent and directly below the shoulder.\n
        Keep your body straight at all times, and hold this position as long as possible.\n
        \n
        Equipment: None
    </string>
</resources>