<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shibedays.workoutplanner.ui.MyWorkoutActivity">

    <item
        android:id="@+id/add_set"
        android:orderInCategory="10"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/menu_add_set"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/re_order"
        android:orderInCategory="30"
        android:title="Re-order Sets"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rename_workout"
        android:orderInCategory="20"
        android:title="@string/rename_workout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>