<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:text="@string/placeholder_title"
        style="@style/ListTitle"/>

    <LinearLayout
        android:id="@+id/bottom_sheet_top"
        style="@style/BottomSheetLinearRow">

        <ImageView
            android:id="@+id/bottom_sheet_top_ic"
            android:src="@drawable/ic_edit_black_24dp"
            style="@style/BottomSheetImage"/>
        <TextView
            android:id="@+id/bottom_sheet_top_text"
            android:text="@string/bottom_sheet_edit"
            style="@style/BottomSheetText" />

    </LinearLayout>

    <!-- <View style="@style/Divider"/> -->

    <LinearLayout
        android:id="@+id/bottom_sheet_bottom"
        style="@style/BottomSheetLinearRow">

        <ImageView
            android:id="@+id/bottom_sheet_bottom_ic"
            android:src="@drawable/ic_delete_black_24dp"
            style="@style/BottomSheetImage" />
        <TextView
            android:id="@+id/bottom_sheet_bottom_text"
            android:text="@string/bottom_sheet_delete"
            style="@style/BottomSheetText"/>

    </LinearLayout>

    <View style="@style/Divider" />



</LinearLayout>