<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_shallow_margin">

    <LinearLayout
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:padding="2dp"
            android:layout_marginStart="@dimen/activity_shallow_margin"
            android:layout_marginTop="@dimen/activity_shallow_vertical_margin"
            android:background="@drawable/syle_rounded_drop_box"
            android:src="@drawable/ic_image_black_24dp" />
        <TextView
            android:id="@+id/display_set_name"
            android:maxLength="18"
            android:hint="@string/name_hint"
            style="@style/Dialog_View_Text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/display_set_descrip"
        android:layout_below="@id/top_row"
        android:hint="@string/descrip_hint"
        android:maxLines="4"
        android:minLines="4"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_shallow_margin"
        android:layout_marginEnd="@dimen/activity_shallow_margin"
        android:textSize="@dimen/text_size_normal" />


    <ScrollView
        android:id="@+id/scroll_text"
        android:layout_below="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>


    <TextView
        android:id="@+id/display_set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_set_descrip"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_shallow_margin"
        android:layout_marginEnd="@dimen/activity_shallow_margin"
        android:layout_centerInParent="true"
        android:textSize="@dimen/text_size_large"
        android:hint="@string/default_time"/>

</RelativeLayout>