<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shibedays.workoutplanner.ui.MyWorkoutActivity"
    tools:showIn="@layout/activity_my_workout"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="100">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/view_pager_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <android.support.design.widget.TabLayout
            android:id="@+id/pager_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:tabGravity="center"
            app:tabBackground="@drawable/tab_selector"
            app:tabIndicatorHeight="0dp"/>

        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pager_header">

        </android.support.v4.view.ViewPager>
    </RelativeLayout>

    <!--
    <android.support.v7.widget.RecyclerView
        android:id="@+id/set_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:overScrollMode="never">

    </android.support.v7.widget.RecyclerView>
    -->
    <View style="@style/Divider" />

    <RelativeLayout
        android:id="@+id/rel_view_titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/round_entry_layout"
            android:layout_width="@dimen/Edit_Number_Width"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            app:hintTextAppearance="@style/TextLabelHint">

            <EditText
                android:id="@+id/number_rounds"
                style="@style/Edit_Number"
                android:maxLength="2"
                android:hint="@string/round_title_text"
                android:text="@string/default_num" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/rest_entry_layout"
            android:layout_width="@dimen/Edit_Time_Width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:hintTextAppearance="@style/TextLabelHint">

            <EditText
                android:id="@+id/rest_time"
                style="@style/View_Clickable_Time"
                android:hint="@string/rest_title_text"
                android:text="@string/default_time" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/break_entry_layout"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="@dimen/Edit_Time_Width"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextLabelHint">

            <EditText
                android:id="@+id/break_time"
                style="@style/View_Clickable_Time"
                android:hint="@string/break_title_text"
                android:text="@string/default_time" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/total_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/time_title"
                style="@style/TextView_Header"
                android:text="Total Time:"/>
            <TextView
                android:id="@+id/total_time"
                style="@style/TextView"
                android:text="@string/default_time"
                android:layout_gravity="center"/>
        </android.support.v7.widget.LinearLayoutCompat>


    </RelativeLayout>
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_workout_button"
        android:onClick="startTimer"
        android:focusable="true"
        android:layout_marginBottom="@dimen/activity_shallow_vertical_margin"
        android:theme="@style/Button_Custom"/>
</LinearLayout>


<!--
        <LinearLayout
            android:id="@+id/rest_entry_layout"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_deep_horizontal_margin"
            android:layout_marginTop="@dimen/activity_deep_vertical_margin"
            style="@style/LinearEntryField">

            <TextView
                android:id="@+id/rest_title_text"
                android:text="@string/rest_title_text"
                style="@style/EntryTextTitle"/>

            <TextView
                android:id="@+id/rest_time"
                style="@style/Edit_Text"
                android:text="@string/default_time" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/round_entry_layout"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            style="@style/LinearEntryField">

            <TextView
                android:id="@+id/rounds_title_text"
                android:text="@string/round_title_text"
                style="@style/EntryTextTitle" />

            <EditText
                android:id="@+id/number_rounds"
                android:text="@string/default_num"
                android:inputType="number"
                android:imeOptions="actionDone"
                style="@style/EditTextEntryField"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/total_time_layout"
            android:layout_above="@id/start_button"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            style="@style/LinearEntryField">

            <TextView
                android:id="@+id/total_time_title"
                android:text="Total Time:"
                style="@style/EntryTextTitle" />

            <TextView
                android:id="@+id/total_time"
                android:text="@string/default_time"
                style="@style/EntryTextTitle"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/break_entry_layout"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_deep_horizontal_margin"
            android:layout_marginTop="@dimen/activity_deep_vertical_margin"
            style="@style/LinearEntryField">

            <TextView
                android:id="@+id/break_title_text"
                android:text="@string/break_title_text"
                style="@style/EntryTextTitle"/>

            <TextView
                android:id="@+id/break_time"
                android:text="@string/default_time"
                style="@style/Edit_Text"/>

        </LinearLayout>
-->